Added a lot of css details
I'm pretty happy with the look right now, added a lot of colors and dimension correcting
Also imported an analogic-like display font for the calculator display which also helps differentiate it from how the buttons look

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         <div class="buttons">
             <div class="first row">
-                <button value="clear">C</button>
-                <button value="back">DEL</button>
+                <button value="clear" id="c">C</button>
+                <button value="back" id="del">DEL</button>
             </div>
             <div class="second row">
                 <button value="7">7</button>
