--- a/index.html
+++ b/index.html
@@ -16,31 +16,32 @@
         </div>
         <div class="buttons">
             <div class="first row">
-                <button value="clear" id="c">C</button>
-                <button value="back" id="del">DEL</button>
+                <button class="button c" value="clear">C</button>
+                <button class="button del" value="back">DEL</button>
             </div>
             <div class="second row">
-                <button value="7">7</button>
-                <button value="8">8</button>
-                <button value="9">9</button>
-                <button value="/">/</button>
+                <button class="button number" value="7">7</button>
+                <button class="button number" value="8">8</button>
+                <button class="button number" value="9">9</button>
+                <button class="button operation" value="/">/</button>
             </div>
             <div class="third row">
-                <button value="4">4</button>
-                <button value="5">5</button>
-                <button value="6">6</button>
-                <button value="x">x</button>
+                <button class="button number" value="4">4</button>
+                <button class="button number" value="5">5</button>
+                <button class="button number" value="6">6</button>
+                <button class="button operation" value="*">*</button>
             </div>
             <div class="fourth row">
-                <button value="1">1</button>
-                <button value="2">2</button>
-                <button value="3">3</button>
-                <button value="-">-</button>
+                <button class="button number" value="1">1</button>
+                <button class="button operation number" value="2">2</button>
+                <button class="button operation number" value="3">3</button>
+                <button class="button operation" value="-">-</button>
             </div>
             <div class="fifth row">
-                <button value="=">=</button>
-                <button value="0">0</button>
-                <button value="+">+</button>
+                <button class="button eval" value="=">=</button>
+                <button class="button number" value="0">0</button>
+                <button class="button operation" value="+">+</button>
+                <button class="button number" value=".">.</button>
             </div>
         </div>
     </div>
