Added a lot of functionality and fixed some bugs, just need some more features and it's done

--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
         </div>
         <div class="buttons">
             <div class="first row">
-                <button class="button c" value="clear">C</button>
-                <button class="button del" value="back">DEL</button>
+                <button class="button c">C</button>
+                <button class="button del">DEL</button>
             </div>
             <div class="second row">
-                <button class="button number" value="7">7</button>
-                <button class="button number" value="8">8</button>
-                <button class="button number" value="9">9</button>
-                <button class="button operation" value="/">/</button>
+                <button class="button number">7</button>
+                <button class="button number">8</button>
+                <button class="button number">9</button>
+                <button class="button operation">/</button>
             </div>
             <div class="third row">
-                <button class="button number" value="4">4</button>
-                <button class="button number" value="5">5</button>
-                <button class="button number" value="6">6</button>
-                <button class="button operation" value="*">*</button>
+                <button class="button number">4</button>
+                <button class="button number">5</button>
+                <button class="button number">6</button>
+                <button class="button operation">*</button>
             </div>
             <div class="fourth row">
-                <button class="button number" value="1">1</button>
-                <button class="button operation number" value="2">2</button>
-                <button class="button operation number" value="3">3</button>
-                <button class="button operation" value="-">-</button>
+                <button class="button number">1</button>
+                <button class="button number">2</button>
+                <button class="button number">3</button>
+                <button class="button operation">-</button>
             </div>
             <div class="fifth row">
-                <button class="button eval" value="=">=</button>
-                <button class="button number" value="0">0</button>
-                <button class="button operation" value="+">+</button>
-                <button class="button number" value=".">.</button>
+                <button class="button eval">=</button>
+                <button class="button number">0</button>
+                <button class="button operation">+</button>
+                <button class="button dot">.</button>
             </div>
         </div>
     </div>
